# templat

./: .clang-format  .gitignore  1dqv2fqsmhcirjjmeidpk4fssmkklcre.darc  CMakeLists.txt  README.md  TEST.md  format.sh  gsuesp9sbnqlsfckc5svuluhafb6t2si  h1ovbcphebbjnap1e8vucvdun8angnfv.darc  manifest
benchmarks/: .gitignore  (+9 more)
tests/: CMakeLists.txt  tddmain.cpp
tests/TempLat/fft/: fftdecomposition.cpp  fftlibraryselector.cpp  fftnormalization.cpp
tests/TempLat/ghostcells/: bctesthelpers.h  ghostbuster.cpp  ghostupdater.cpp  setbcspec.cpp
tests/TempLat/lattice/: latticebcspec.cpp
tests/TempLat/lattice/IO/HDF5/: filesaverhdf5.cpp  hdf5tester.cpp
tests/TempLat/lattice/algebra/adapter/: momentuminterpolator.cpp
tests/TempLat/lattice/algebra/complexalgebra/: complexfield.cpp  complexfieldadd.cpp  complexfieldconjugate.cpp  complexfieldmultiply.cpp  complexfieldshift.cpp  complexfieldsubtract.cpp  complexfieldtester.cpp  complexwrapper.cpp  imag.cpp  real.cpp
tests/TempLat/lattice/algebra/complexalgebra/helpers/: hascomplexfieldget.cpp
tests/TempLat/lattice/algebra/conditional/: conditionalbinarygetter.cpp  conditionalunarygetter.cpp
tests/TempLat/lattice/algebra/constants/: number.cpp  numbercollection.cpp  symbols.cpp
tests/TempLat/lattice/algebra/coordinates/: dimensioncountrecorder.cpp  momentummultiplicity.cpp  spatialcoordinate.cpp  wavenumber.cpp
tests/TempLat/lattice/algebra/gaugealgebra/: scalarcomplexmultiply.cpp  u1exponential.cpp
tests/TempLat/lattice/algebra/helpers/: doeval.cpp  getcomponent.cpp  getdx.cpp  getfloattype.cpp  getgetreturntype.cpp  getkir.cpp  getndim.cpp  getngrid.cpp  getstring.cpp  gettoolbox.cpp  getvectorcomponent.cpp  getvectorsize.cpp  hasderivmethod.cpp  hasdoweneedghosts.cpp  hasdx.cpp  haseval.cpp  hasexplicitcoordinatedependence.cpp  hasghostmethod.cpp  haskir.cpp  hasspaceconfirmationmethods.cpp  hasstaticgetter.cpp  hasstringmethod.cpp  hasvectorgetmethod.cpp  iscomplextype.cpp  isstdgettable.cpp  istemplatgettable.cpp  isvariadicindex.cpp  postget.cpp  preget.cpp
tests/TempLat/lattice/algebra/listoperators/: binaryfold.cpp  listabsolutevalue.cpp  listadd.cpp  listcomplexconjugate.cpp  listdivide.cpp  listexponential.cpp  listlog.cpp  listmultiply.cpp  listpower.cpp  listsubtract.cpp  listunaryminus.cpp  total.cpp  vectordotter.cpp
tests/TempLat/lattice/algebra/matrix3x3algebra/: .sym3x3symT3x3multiply.cpp.kate-swp  allmatrixcomponent.cpp  allmatrixmultiply.cpp  hermwrapper.cpp  matrixwrapper.cpp  symtracelessadd.cpp  symtracelessconjugate.cpp  symtracelessfield.cpp  symtracelessshift.cpp  symtracelesssubtract.cpp  symtracelesswrapper.cpp  symwrapper.cpp
tests/TempLat/lattice/algebra/operators/: absolutevalue.cpp  acos.cpp  add.cpp  arg.cpp  asinh.cpp  complexconjugate.cpp  cosh.cpp  cosine.cpp  diracdeltafunction.cpp  divide.cpp  exponential.cpp  heavisidestepfunction.cpp  log.cpp  multiply.cpp  power.cpp  shift.cpp  sine.cpp  sinh.cpp  squareroot.cpp  subtract.cpp  tanh.cpp  unaryminus.cpp
tests/TempLat/lattice/algebra/random/: randomgaussianfield.cpp
tests/TempLat/lattice/algebra/spatialderivatives/: backdiff.cpp  dirichlet.cpp  forwdiff.cpp  forwdij.cpp  latticeforwardgradient.cpp  latticelaplacian.cpp  neutdiff.cpp  neutdij.cpp  normgradientsquare.cpp
tests/TempLat/lattice/algebra/su2algebra/: complexfieldsu2doubletmultiply.cpp  scalarsu2multiplication.cpp  su2algebratester.cpp  su2averager.cpp  su2commutator.cpp  su2dagger.cpp  su2doublet.cpp  su2doubletaverager.cpp  su2doubletdagger.cpp  su2doubletwrapper.cpp  su2expmap.cpp  su2expmapinv.cpp  su2field.cpp  su2groupwrapper.cpp  su2liealgebrafield.cpp  su2multiply.cpp  su2shift.cpp  su2subtract.cpp  su2sum.cpp  su2wrapper.cpp
tests/TempLat/lattice/field/: field.cpp
tests/TempLat/lattice/field/helpers/: flattener.cpp  hasastuplecat.cpp
tests/TempLat/lattice/field/views/: fieldviewconfig.cpp  fieldviewfourier.cpp
tests/TempLat/lattice/measuringtools/: averager.cpp  maximum.cpp  radialprojector.cpp  toolwithownmemory.cpp  wallaverager.cpp
tests/TempLat/lattice/measuringtools/projectionhelpers/: radialbincomputer.cpp  radialprojectionresult.cpp  radialprojectionsingledatum.cpp
tests/TempLat/lattice/memory/: memoryblock.cpp  memorylayoutstate.cpp  memorymanager.cpp  triplestatelayouts.cpp  verbositylevels.cpp
tests/TempLat/lattice/memory/memorylayouts/: checkerboardlayout.cpp  fftlayoutstruct.cpp  hermitianpartners.cpp  layoutstruct.cpp  layoutstructglobal.cpp  layoutstructlocal.cpp  layoutstructlocaltransposed.cpp  transpositionmap.cpp
tests/TempLat/parallel/: device.cpp  threadsettings.cpp
tests/TempLat/parallel/devices/kokkos/: kokkos.cpp  kokkos_iteration.cpp  kokkos_memory.cpp
tests/TempLat/parallel/mpi/comm/: cartesianperiodicity.cpp  mpidomainsplit.cpp
tests/TempLat/parallel/mpi/session/: mpiguard.cpp
tests/TempLat/parameters/: bcspec-parsing.cpp  multipleparametergetter.cpp  pairmaker.cpp  parametergetter.cpp  stringconverter.cpp
tests/TempLat/session/: sessionguard.cpp
tests/TempLat/util/: almostequal.cpp  assignabletuple.cpp  containsspace.cpp  endianness.cpp  exception.cpp  factorize.cpp  filetostring.cpp  flatteningtester.cpp  flattenstd.cpp  flattentuple.cpp  floattostring.cpp  foreach.cpp  function.cpp  getcpptypename.cpp  isincontainer.cpp  istuplelike.cpp  latinindiceslist.cpp  loadbalance.cpp  namedtmpfile.cpp  parenthesisstripper.cpp  powr.cpp  shiftedindexsequence.cpp  spline.cpp  static_max.cpp  staticif.cpp  stdatomictype.cpp  stringtrimmer.cpp  templatvector.cpp  tuple_size_tester.cpp  tuple_tools.cpp  tuplemakertester.cpp
tests/TempLat/util/conditionaloutput/: conditionalstream.cpp  outputstream.cpp
tests/TempLat/util/hash/: keccakhash.cpp  keccakhashbareclass.cpp
tests/TempLat/util/json/: filetojson.cpp
tests/TempLat/util/log/: strippathfromfilename.cpp
tests/TempLat/util/random/: randomgaussian.cpp  randomuniform.cpp
tests/TempLat/util/rangeiteration/: for_in_range.cpp  make_tuple_tag.cpp  sum_in_range.cpp  taglisttester.cpp  tagliteral.cpp  tagtester.cpp
tests/TempLat/util/tdd/: throws.cpp
(+452 files in other folders)
